force-app/main/default/objects/Document_Category__c/fields/Monthly_Beat_Plan__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Beat_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Beat Plan</label>
    <referenceTo>Monthly_Beat_Plan__c</referenceTo>
    <relationshipLabel>Document Categories</relationshipLabel>
    <relationshipName>Document_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>