force-app/main/default/objects/Document_Category__c/fields/Opportunity1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity1</label>
    <referenceTo>Opportunity1__c</referenceTo>
    <relationshipLabel>Document Categories</relationshipLabel>
    <relationshipName>Document_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>