force-app/main/default/objects/Document_Category__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Document Categories</relationshipLabel>
    <relationshipName>Document_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>